[gd_scene load_steps=7 format=3 uid="uid://biw6o2l331xpq"]

[ext_resource type="Script" path="res://lobby.gd" id="1_qpbbh"]
[ext_resource type="Texture2D" uid="uid://c1pchtw8k2lei" path="res://Levels/levels.png" id="2_are7n"]
[ext_resource type="FontFile" uid="uid://bd5f37uayww5d" path="res://Assets/misc/Typographica-Blp5.ttf" id="3_qilhw"]
[ext_resource type="FontFile" uid="uid://b32xk1e2lpwgg" path="res://Assets/misc/QuartzoBold-W9lv.ttf" id="4_282ov"]
[ext_resource type="Texture2D" uid="uid://cxrfr8j2e0ght" path="res://Assets/UI/Icons/Icon_Small_Blank_Arrow - reversed.png" id="4_nxp4e"]

[sub_resource type="FontVariation" id="FontVariation_4kraa"]
base_font = ExtResource("4_282ov")

[node name="Lobby" type="Node2D"]
script = ExtResource("1_qpbbh")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -32.0
offset_top = -24.0
offset_right = 4496.0
offset_bottom = 2722.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_are7n")
expand_mode = 1
stretch_mode = 1

[node name="Host" type="Button" parent="."]
offset_left = 480.0
offset_top = 536.0
offset_right = 888.0
offset_bottom = 736.0
theme_override_fonts/font = ExtResource("3_qilhw")
theme_override_font_sizes/font_size = 86
text = "Host"
flat = true

[node name="Join" type="Button" parent="."]
offset_left = 1280.0
offset_top = 544.0
offset_right = 1688.0
offset_bottom = 744.0
theme_override_fonts/font = ExtResource("3_qilhw")
theme_override_font_sizes/font_size = 86
text = "Join"
flat = true

[node name="Back_Button" type="Button" parent="."]
offset_left = 32.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 178.0
icon = ExtResource("4_nxp4e")
flat = true

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = 24.0
offset_right = 1920.0
offset_bottom = 409.0
theme_override_colors/font_color = Color(1, 0.85098, 0.4, 1)
theme_override_fonts/font = SubResource("FontVariation_4kraa")
theme_override_font_sizes/font_size = 300
text = "Lobby"
horizontal_alignment = 1

[connection signal="pressed" from="Host" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
